force-app/main/default/objects/TechnicalOfferItem__c/TechnicalOfferItem__c.object-meta.xml
<CustomObject>
    <label>Technical Offer Item</label>
    <nameField>
        <label>TechnicalOfferItem Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Technical Offer Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>