force-app/main/default/objects/TechnicalOfferItem__c/fields/Definition__c.field-meta.xml
<CustomField>
    <fullName>Definition__c</fullName>
    <description>Definizione dell&apos;Item Offerta tecnica</description>
    <label>Definizione</label>
    <length>255</length>
    <type>Text</type>
</CustomField>