force-app/main/default/objects/TechnicalOfferItem__c/fields/DiscountCode__c.field-meta.xml
<CustomField>
    <fullName>DiscountCode__c</fullName>
    <description>Campo di configurazione che indica il codice sconto.</description>
    <label>Codice Sconto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>