force-app/main/default/objects/TechnicalOfferItem__c/fields/DiscountCodeValue__c.field-meta.xml
<CustomField>
    <fullName>DiscountCodeValue__c</fullName>
    <description>Campo di configurazione che indica il codice sconto.</description>
    <label>Codice Sconto</label>
    <length>10</length>
    <type>Text</type>
</CustomField>