force-app/main/default/objects/TechnicalOfferItem__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <description>durata (+ x giorni da inizio) o data fine</description>
    <label>Durata</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>