force-app/main/default/objects/TechnicalOfferItem__c/fields/FareType__c.field-meta.xml
<CustomField>
    <fullName>FareType__c</fullName>
    <description>la tipologia di tariffa</description>
    <label>Tipo Tariffa</label>
    <length>200</length>
    <type>Text</type>
</CustomField>