force-app/main/default/objects/TechnicalOfferItem__c/fields/FareTypeValue__c.field-meta.xml
<CustomField>
    <fullName>FareTypeValue__c</fullName>
    <description>Valore del Tipo Tariffa associato all&apos;item dell&apos;offerta tecnica</description>
    <label>Tipo Tariffa Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>