force-app/main/default/objects/TechnicalOfferItem__c/fields/G__c.field-meta.xml
<CustomField>
    <fullName>G__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo di configurazione che indica se l&apos;offerta è gestibile.</description>
    <label>G</label>
    <type>Checkbox</type>
</CustomField>