force-app/main/default/objects/TechnicalOfferItem__c/fields/InfoGroup__c.field-meta.xml
<CustomField>
    <fullName>InfoGroup__c</fullName>
    <description>Il gruppo</description>
    <label>Gruppo Info</label>
    <length>200</length>
    <type>Text</type>
</CustomField>