force-app/main/default/objects/TechnicalOfferItem__c/fields/InfoGroupValue__c.field-meta.xml
<CustomField>
    <fullName>InfoGroupValue__c</fullName>
    <description>Valore del Gruppo Info associato all&apos;item dell&apos;offerta tecnica</description>
    <label>Gruppo info Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>