force-app/main/default/objects/TechnicalOfferItem__c/fields/M__c.field-meta.xml
<CustomField>
    <fullName>M__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo tecnico di sviluppo</description>
    <label>M</label>
    <type>Checkbox</type>
</CustomField>