force-app/main/default/objects/TechnicalOfferItem__c/fields/NameExternalId__c.field-meta.xml
<CustomField>
    <fullName>NameExternalId__c</fullName>
    <description>Chiave esterna</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>