force-app/main/default/objects/TechnicalOfferItem__c/fields/NumericValue__c.field-meta.xml
<CustomField>
    <fullName>NumericValue__c</fullName>
    <description>Valore numerico (usato per fattori moltiplicativi/numerici, consumi, per valori di potenza, valori numerici dei prezzi, altri numerici..)</description>
    <label>Valore Numerico</label>
    <length>100</length>
    <type>Text</type>
</CustomField>