force-app/main/default/objects/TechnicalOfferItem__c/fields/Operand__c.field-meta.xml
<CustomField>
    <fullName>Operand__c</fullName>
    <description>Operando</description>
    <label>Operando</label>
    <length>255</length>
    <type>Text</type>
</CustomField>