force-app/main/default/objects/TechnicalOfferItem__c/fields/PriceCode__c.field-meta.xml
<CustomField>
    <fullName>PriceCode__c</fullName>
    <description>Codice prezzo (char - codice che identifica prezzi/sconti…)</description>
    <label>Codice Prezzo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>