force-app/main/default/objects/TechnicalOfferItem__c/fields/PriceCodeValue__c.field-meta.xml
<CustomField>
    <fullName>PriceCodeValue__c</fullName>
    <description>Valore del Codice prezzo associato all&apos;item dell&apos;offerta tecnica</description>
    <label>Codice prezzo value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>