force-app/main/default/objects/TechnicalOfferItem__c/fields/RowId__c.field-meta.xml
<CustomField>
    <fullName>RowId__c</fullName>
    <description>RowId</description>
    <label>RowId</label>
    <length>25</length>
    <type>Text</type>
</CustomField>