force-app/main/default/objects/TechnicalOfferItem__c/fields/S__c.field-meta.xml
<CustomField>
    <fullName>S__c</fullName>
    <description>Campo di configurazione che indica lo Stato operando.</description>
    <label>S</label>
    <length>1</length>
    <type>Text</type>
</CustomField>