force-app/main/default/objects/TechnicalOfferItem__c/fields/StringValue__c.field-meta.xml
<CustomField>
    <fullName>StringValue__c</fullName>
    <description>Stringa testuale</description>
    <label>Stringa testuale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>