force-app/main/default/objects/TechnicalOfferItem__c/fields/TechnicalOffer__c.field-meta.xml
<CustomField>
    <fullName>TechnicalOffer__c</fullName>
    <description>Offerta Tecnica</description>
    <label>Offerta Tecnica</label>
    <referenceTo>TechnicalOffer__c</referenceTo>
    <relationshipLabel>Technical Offer Items</relationshipLabel>
    <relationshipName>RigheOffertaTecnica</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>