force-app/main/default/objects/TechnicalOfferItem__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Tipologia</description>
    <label>Tipologia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>