force-app/main/default/objects/TechnicalOfferItem__c/fields/V__c.field-meta.xml
<CustomField>
    <fullName>V__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo tecnico di sviluppo</description>
    <label>V</label>
    <type>Checkbox</type>
</CustomField>